--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,7 @@
+* {
+    font-family: system-ui, BlinkMacSyste, sans-serifns-serif, sans-serif;
+}
+
 html {
     background-color: rgba(27, 38, 54, 1);
     text-align: center;
@@ -10,9 +14,6 @@ body {
     padding: 0;
     margin: 0;
     color: white;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
 }
 
 @font-face {
